fix: added functionality where section button visible on scroll

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,11 @@
 @import "./_dates_picker";
 //
 @import "./header";
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
